<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake</name>
  <version>2.5.0</version>
  <description>The entry point package for the ament buildsystem in CMake.</description>

  <maintainer email="clalancette@gmail.com">Chris Lalancette</maintainer>

  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>

  <build_depend>ament_cmake_core-devel</build_depend>
  <build_export_depend>ament_cmake_core-devel</build_export_depend>

  <build_depend>ament_cmake_export_dependencies-devel</build_depend>
  <build_export_depend>ament_cmake_export_dependencies-devel</build_export_depend>

  <build_export_depend>ament_cmake_core-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_definitions-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_dependencies-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_include_directories-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_interfaces-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_libraries-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_link_flags-devel</build_export_depend>
  <build_export_depend>ament_cmake_export_targets-devel</build_export_depend>
  <build_export_depend>ament_cmake_gen_version_h-devel</build_export_depend>
  <build_export_depend>ament_cmake_libraries-devel</build_export_depend>
  <build_export_depend>ament_cmake_python-devel</build_export_depend>
  <build_export_depend>ament_cmake_target_dependencies-devel</build_export_depend>
  <build_export_depend>ament_cmake_test-devel</build_export_depend>
  <build_export_depend>ament_cmake_version-devel</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
